--- a/webappsql/Pages/Index.cshtml
+++ b/webappsql/Pages/Index.cshtml
@@ -14,7 +14,7 @@
                 <th scope="col"> VendorName</th>
                 <th scope="col"> CourseID</th>
                 <th scope="col"> CourseName</th>
-                <th scope="col"> Price</th>
+                <th scope="col"> Price in USD</th>
                 <th scope="col"> DiscountPercent</th>
             </tr>
         </thead>
