--- a/webappsql/Pages/Index.cshtml
+++ b/webappsql/Pages/Index.cshtml
@@ -6,7 +6,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome!! This is the list of Vendor specific Certification Courses available from PGcloud Acadmy</h1>
+    <h1 class="display-4">Technical trainings offered by PGCloud Academy </h1>
+    <h1 class="display-4"> Hurry!! Grab the offer !! Discounts available till 27 Dec 2023 </h1>
     <table class="table table-bordered">
         <thead>
 
