--- a/webappsql/Pages/Index.cshtml
+++ b/webappsql/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Technical trainings offered by PGCloud Academy </h1>
-    <h1 class="display-4"> Hurry!! Grab the offer !! Discounts available till 27 Dec 2023 </h1>
+    <h1 class="display-4"> Grab the offer !! Discounts available till 31 Dec 2023 </h1>
     <table class="table table-bordered">
         <thead>
 
